fix: Added More API's, applied Index on StudentMarks
